--- a/content/preliminaries/ocp.tex
+++ b/content/preliminaries/ocp.tex
@@ -11,13 +11,19 @@ catalyst discovery: Being able to efficiently and accurately predict the
 forces and energy of inorganic and organic interfaces for use in catalysis avoids the 
 computational bottlenecks of traditional simulation tools (see \ref{subsubsec:atomic-simulations-general}). 
 
-The Open Catalyst Project\footnote{\url{https://github.com/Open-Catalyst-Project/ocp}} \cite*{Chanussot_2021} is a joint effort by Facebook AI and Carnegie Mellon 
-University's Department of Chemical Engineering which was launched in 2020 and 
-aims to provide a unified dataset and baseline models for predicting forces and energy in molecular 
-simulations of catalysts. The project provides the Open Catalyst 2020 (OC20) dataset, which contains 
+The Open Catalyst Project\footnote{\url{https://github.com/Open-Catalyst-Project/ocp}} \cite*{Chanussot_2021} 
+is a joint effort by Facebook AI and Carnegie Mellon University's Department of Chemical Engineering which was 
+launched in 2020 and aims to provide a unified dataset and baseline models for predicting forces and energy in 
+molecular simulations of catalysts. The project provides the Open Catalyst 2020 (OC20) dataset, which contains 
 about 1.2 million relaxations of molecular adsorptions onto surfaces simulated with DFT. Fundamentally this 
 precomputed dataset opens the door for precise predictions through machine learning models and allows
 for large-scale explorations of new catalysts.
+
+Furthermore, the Open Catalyst Project offers unified implementations of DimeNet \ref{subsubsec:dimenet} and 
+GemNet \ref{subsubsec:gemnet}, as well as its subvariants. Developers can clone the repository and select 
+an model to be trained or evaluated on force-centric or energy-centric tasks with precomputed simulations of 
+catalysts. New models can be submitted to the evaluation server and get listed with their metrics on the OCP 
+leaderboard\footnote{\url{https://opencatalystproject.org/leaderboard.html}}.
 
 Recently, the OCP team released a new version version of the dataset, Open Catalyst 2022 (OC22) 
 \cite{https://doi.org/10.48550/arxiv.2206.08917}.
