--- a/content/preliminaries/atomic_simulations/dimenet.tex
+++ b/content/preliminaries/atomic_simulations/dimenet.tex
@@ -92,5 +92,5 @@ DimeNet++ \cite{https://doi.org/10.48550/arxiv.2011.14115} is an upgraded versio
 DimeNet that increases the efficiency of training without impacting the quality of results. 
 These improvements include replacing the bilinear layer in the directional message passing 
 step by a simpler Hadamard product, downprojecting the embeddings into lower dimensions in
-computation-intensive parts of the model and upproject them back to the original dimensions 
+computation-intensive parts of the model and up-project them back to the original dimensions 
 after these layers, and using less interaction layers.
