--- a/content/preliminaries/deepspeed.tex
+++ b/content/preliminaries/deepspeed.tex
@@ -22,7 +22,7 @@ is memory inefficient as there is a lot of redundancy in storing a copy of the w
 model in each data-parallel process, model parallelism can impose significant communication
 overheads. 
 
-At this point, let us just briefly remind of the types of memory consumption 
+At this point, let us just briefly remind ourselves of the types of memory consumption 
 that occur when training neural networks: The main components that consume memory are the 
 model itself (including parameters, gradients and optimizer states), 
 the current data batch, as well as residual state memory, namely activations that are 
