--- a/content/preliminaries/scalable_ml.tex
+++ b/content/preliminaries/scalable_ml.tex
@@ -42,5 +42,5 @@ was developed, in which the model is split horizontally and the communication be
 Popular implementations of pipeline parallelism include G-Pipe \cite*{10.48550/ARXIV.1811.06965} and 
 PipeDream \cite*{10.48550/ARXIV.1806.03377}. G-Pipe pipelines the execution of micro-batches accross machines, 
 effectively overlapping executions of batches during forward and backward passes, while PipeDream intersperses the execution of 
-forward and backward passes thorugh more complex scheduling algorithms. 
+forward and backward passes through more complex scheduling algorithms. 
 
