Add Ludger's suggestions from chapter 3

--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -1,7 +1,7 @@
 \section*{Appendix}
 \addcontentsline{toc}{section}{Appendix}
 
-The figures below show the memory utilization for 
+The figures below show memory utilization for 
 CUDA tensors averaged over all GPUs over time. 
 Allocated memory is \textcolor{tum-dark-blue}{blue},
 while reserved memory is \textcolor{tum-orange}{orange}.
