--- a/content/evaluation/datasets.tex
+++ b/content/evaluation/datasets.tex
@@ -3,8 +3,11 @@
 
 \subsection{Datasets}
 
-The OC20 dataset contains training and evluation data using DFT approximation and 
-structure relaxation. 
+The OC20 dataset \cite{Chanussot_2021} contains training and evaluation data of roughly 
+1.2M DFT relaxations using a range of different materials, surfaces and adsorbates. 
+Jointly with the dataset, three different challenges for the community were published:
+IS2RE (Initial Structure to Relaxed Energy), S2EF (Structure to Energy and Forces) and
+IS2RS (Initial Structure to Relaxed Structure). In our work, we focused on the first two.
 
 \subsubsection{Initial Structure to Relaxed Energy (IS2RE)}
 
