--- a/content/evaluation/results.tex
+++ b/content/evaluation/results.tex
@@ -112,7 +112,7 @@ in Figure~\ref{fig:dimenet-results}.
     \multicolumn{1}{|l|}{}                          & rest        & 00:18:53 & \textbf{00:13:05} & 00:41:39       & 00:41:41          & 00:41:43 & 00:46:23      & 00:42:11 & 00:22:13          \\ \hline
     \end{tabular}}
 
-    \vspace*{1em}
+    \vspace*{2em}
 
     \begin{subfigure}[t]{0.48\textwidth}
         \centering
@@ -136,6 +136,8 @@ in Figure~\ref{fig:dimenet-results}.
     \multicolumn{1}{|l|}{}                          & backward    & 01:10:58 & 00:43:16          & \textbf{00:39:29} & 00:39:35       & 00:45:34 & 01:04:43       & 00:42:51          & 01:16:32    \\ \cline{2-10} 
     \multicolumn{1}{|l|}{}                          & rest        & 00:05:07 & \textbf{00:03:55} & 00:06:12          & 00:06:47       & 00:11:35 & 00:12:47       & 00:10:25          & 00:12:01    \\ \hline
     \end{tabular}}
+
+    \vspace*{1em}
 
     \captionsetup{width=\dimexpr\textwidth-1.5cm\relax}
     \caption{Memory consumption and runtimes for GemNet. 
@@ -174,7 +176,7 @@ in Figure~\ref{fig:dimenet-results}.
     \multicolumn{1}{|l|}{}                          & rest        & 00:17:49 & 00:07:54 & 02:12:33 & 02:17:11 & \scriptsize OOT   & \scriptsize OOT      & \textbf{00:04:08} & 00:04:10    \\ \hline
     \end{tabular}}
 
-    \vspace*{1em}
+    \vspace*{2em}
 
     \begin{subfigure}[t]{0.48\textwidth}
         \centering
@@ -203,10 +205,13 @@ in Figure~\ref{fig:dimenet-results}.
     \multicolumn{1}{|l|}{}                          & rest        & 00:04:34 & 00:04:05          & 01:04:22          & 01:06:46 & 01:04:35       & 01:06:31      & \textbf{00:02:12} & 00:02:18    \\ \hline
     \end{tabular}}
 
+    \vspace*{1em}
+
     \captionsetup{width=\dimexpr\textwidth-1.5cm\relax}
     \caption{Memory consumption and runtimes for DimeNet++. Memory is in GB, runtimes in the \textit{h:m:s} format.
     \textcolor{red}{Red} runs went out of time.}
     \label{fig:dimenet-results}
     
-
 \end{figure}
+
+\newpage
